tests/baselines/reference/collisionThisExpressionAndNameResolution.errors.txt
tests/cases/compiler/collisionThisExpressionAndNameResolution.ts(8,25): error TS2400: Expression resolves to variable declaration '_this' that compiler uses to capture 'this' reference.


==== tests/cases/compiler/collisionThisExpressionAndNameResolution.ts (1 errors) ====
    var console : {
        log(message: any);
    }
    class Foo {
        x() {
            var _this = 10; // Local var. No this capture in x(), so no conflict.
            function inner() {
                console.log(_this); // Error as this doesnt not resolve to user defined _this
                            ~~~~~
!!! error TS2400: Expression resolves to variable declaration '_this' that compiler uses to capture 'this' reference.
                return x => this;   // New scope.  So should inject new _this capture into function inner
            }
        }
    }